--- a/assets/scss/tagged-notes.scss
+++ b/assets/scss/tagged-notes.scss
@@ -1,6 +1,6 @@
 @import "defaults";
-@import "variables";
-@import "themes/{{ default "light" .Site.Params.Theme }}";
+@import "override/variables";
+@import "themes/{{ default "dark" .Site.Params.Theme }}";
 
 @import "vendor/normalize";
 @import "utils";
@@ -16,10 +16,12 @@
 @import "components/shortcodes";
 @import "components/search";
 @import "components/list-item";
-@import "components/page-menu";
+@import "components/site-menu"; // Left Menu
+@import "components/page-menu"; // Right Menu
+@import "components/page-footer"; // Right Menu
 
 @import "mobile";
 
 
 // Custom defined styles
-@import "custom";
+@import "override/custom";
